# ANTISEQUENCE

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
example_data/: bounded_match.fastq  match.fastq  normalize.fastq  pad.fastq  simple.fastq
examples/: bounded_match.rs  fork_fastq.rs  match_fastq.rs  normalize_fastq.rs  pad_fastq.rs  simple_fastq.rs  single_cell_fastq.rs
src/: errors.rs  expr.rs  fastq.rs  graph.rs  inline_string.rs  iter.rs  lib.rs  parse_utils.rs  patterns.rs  read.rs
src/expr/: expr_node.rs  format.rs  node.rs  selector.rs  transform.rs
src/graph/: node.rs
src/graph/node/: bernoulli_node.rs  collect_fastq_node.rs  count_node.rs  cut_node.rs  for_each_node.rs  fork_node.rs  input_fastq_node.rs  intersect_union_node.rs  match_any_node.rs  match_polyx_node.rs  match_regex_node.rs  output_fastq_node.rs  retain_node.rs  select_node.rs  set_node.rs  take_node.rs  time_node.rs  trim_node.rs  try_node.rs  while_node.rs
src/iter/: bernoulli_node.rs  bernoulli_reads.rs  collect_fastq_node.rs  collect_fastq_reads.rs  count_node.rs  count_reads.rs  cut_node.rs  cut_reads.rs  dist_match_reads.rs  for_each_node.rs  for_each_reads.rs  fork_node.rs  fork_reads.rs  intersect_union_node.rs  intersect_union_reads.rs  length_in_bounds_reads.rs  match_any_node.rs  match_any_reads.rs  match_polyx_node.rs  match_polyx_reads.rs  match_regex_node.rs  match_regex_reads.rs  normalize_reads.rs  pad_reads.rs  regex_match_reads.rs  retain_node.rs  retain_reads.rs  revcomp_reads.rs  reverse_reads.rs  set_node.rs  set_reads.rs  take_node.rs  take_reads.rs  time_node.rs  time_reads.rs  trim_node.rs  trim_reads.rs
