[package]
name = "antisequence"
version = "0.1.0"
edition = "2021"

[dependencies]
needletail = "0.5"
rustc-hash = "1.1"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
thread_local = "1.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
block-aligner = { git = "https://github.com/Daniel-Liu-c0deb0t/block-aligner", branch = "dev", features = ["simd_avx2"] }
[target.'cfg(target_arch = "aarch64")'.dependencies]
block-aligner = { git = "https://github.com/Daniel-Liu-c0deb0t/block-aligner", branch = "dev", features = ["simd_neon"] }
